front/styles.css
:root {
  /*
  GENERAL COLORS
  */
  --background-general: #110f24;
  --slight-contrast: #797599;
  --text-general: #dedde6;
  --negative-general: #e95656;
  --positive-general: #5bd999;
  --h2h-general: #34c297;
  --graph-general: #34bdc2;
  --h2h-detail: #88ebcd;
  --graph-detail: #95ebee;
  --tools-general: #18152e;
  --component-general: #3f3c57;
  --component-general-hover: #4e4b69;
  --overall-holder: #21202e;
  --dropdown-back-general: #8b87af;
  --active-general: #1a1826;
  --row-cell: #3c3952;
  --row-odd-cell: #494561;
  --special-columns: #464166;
  --delete-div: #f15353;
  --weather-vis-back: #292738;
  --weather-vis-border: #2c2b3b;
  --h2h-back: #1f1b3b;
  --h2h-back-hover: #302a57;
  --active-buttons-back: #5f5a7c;
  --mid-gray-contrast: #63636e;
  --awaiting-color: #8a8a8a;
  --mode-line-edit: #fff7b0;
  --mode-line-ai: #baffea;
  --mode-line-view: #e8b6ff;
  --prob-viewer-hover: #625e86;
  --custom-modal-back: #393744;
  --text-in-front: #eeedf3;
  --background--buttons-hover: #6f698f;

  --f2-border: #38c8f0;
  --f2-back: #388cd5;
  --f2-active: #1374fc;
  --f3-back: #cf2e2e;
  --f3-border: #ff4848;


  /*
  TEAMS COLORS
  */
  --alphatauri-original: #5E8FAA;
  --alphatauri-secondary-original: #f1f1f1;
  --alpine-original: #2293D1;
  --alpine-secondary-original: #fd48c7;
  --andretti-primary: #fac51c;
  --andretti-secondary: #1e7696;
  --lotus-primary: #b09247;
  --lotus-secondary: #595959;
  --visarb-primary: #596fa4;
  --visarb-secondary: #f1f1f1;
  --toyota-primary: #EB0A1B;
  --toyota-secondary: #f1f1f1;
  --hugo-primary: #bd9514;
  --hugo-secondary: #f1f1f1;
  --alphatauri-primary: #5E8FAA;
  --porsche-primary: #c50c28;
  --porsche-secondary: #f1f1f1;
  --brawn-primary : #d0e610;
  --brawn-secondary: #f1f1f1;
  --ferrari-primary: #ff2800;
  --general-secondary: #f1f1f1;
  --mercedes-primary: #6CD3BF;
  --redbull-primary: #3671C6;
  --redbull-secondary: #ffd300;
  --stake-primary: #01e500;
  --stake-secondary: #595959;
  --audi-primary: #f50537;
  --audi-secondary: #f1f1f1;
  --sauber-primary: #f50537;
  --aston-primary: #358C75;
  --aston-secondary: #c3dc00;
  --alfa-original: #C92D4B;
  --alfa-secondary-original: #f1f1f1;
  --alfa-primary: #C92D4B;
  --alfa-secondary: #f1f1f1;
  --alphatauri-secondary: #f1f1f1;
  --haas-primary: #B6BABD;
  --haas-secondary: #f62039;
  --mclaren-primary: #F58020;
  --mclaren-secondary: #47c7fc;
  --williams-primary: #37BEDD;
  --alpine-primary: #2293D1;
  --alpine-secondary: #fd48c7;
  --renault-primary: #f7c82f;
}


@font-face {
  font-family: 'Formula1';
  src: url("../assets/fonts/Formula1-Regular.ttf") format('truetype');
}

@font-face {
  font-family: 'Formula1Bold';
  src: url("../assets/fonts/Formula1-Bold.ttf") format('truetype');
}

.bold-font {
  font-family: 'Formula1Bold' !important;
}


body {
  background-color: var(--background-general) !important;
  max-height: 930px;
  overflow-x: hidden;
}



.font {
  font-family: 'Formula1';
}

#byname {
  text-decoration: none;
  color: var( --slight-contrast);
  transition: color 0.4s;
}

.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: var(--tools-general);
  color: var( --slight-contrast);
  border-top: 1px solid var( --slight-contrast);
  text-align: center;
  padding: 5px 0;
  font-size: 16px;
  z-index: 200;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-height: 35px;
}

.scroll-wrapper{
  overflow-y: auto;
}

.scroll-wrapper::-webkit-scrollbar {
  width: 6px;
}

.scroll-wrapper::-webkit-scrollbar-thumb {
  background-color: white;
  border-radius: 6px;
}

.socials a,
.footer i {
  cursor: pointer !important;
  padding: 0 7px;
  transition: color 0.3s;
  color: var( --slight-contrast);
  text-decoration: none;
}

.socials a:hover,
.footer i:hover {
  color: var( --text-general);
}

.socials a {
  display: inline-block;
  overflow: hidden;
  max-width: 27px;
  white-space: nowrap;
  transition: max-width 0.5s ease-in-out, color 0.3s;
}

.socials a:hover {
  max-width: 180px;  /* Ajusta este valor según el tamaño máximo que desees para el texto */
}

.update-info {
  transition: color 0.4s;
  text-decoration: none;
  color: var( --slight-contrast);
  cursor: default;
}

.bi-exclamation-diamond {
  color: var( --negative-general);
}

.bi-exclamation-lg,
.bi-cloud-download {
  color: #d3d393;
  cursor: pointer;
}

.bi-exclamation-lg:hover,
.bi-cloud-download:hover {
  color: #FFFF99;
}

a.bi-reddit:hover {
  color: #fc6e28;
}

a.bi-twitter-x:hover,
#byname:hover {
  color: #2ca4ee;
}

a.bi-heart:hover {
  color: #ef51f5;
}

a.bi-linkedin:hover {
  color: #0077b5 ;
}


.status {
  display: flex;
  flex-direction: row;
  width: 700px;
  justify-content: flex-end;
}

.status-info {
  margin-right: 7px;
  cursor: default;
}

.awaiting {
  color: var(--awaiting-color);
}


.rounded-checkbox {
  display: inline-flex;
  align-items: center;
  cursor: pointer;
  border-radius: 5px;
  margin-top: 10px;
  border: 1px solid #adb5bd;
  min-width: 20px;
  min-height: 20px;
}

.title {
  text-align: center;
  color: white;
  font-size: 28px;
}

.standings-list{
  width: 65px;
  text-align: center;
}

.trasnfer-top-panel {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.transfer-title {
  flex: 1;
  text-align: center;
}

.auto-contract {
  color: var( --text-general);
  font-size: 20px;
  padding-right: 2rem;
}

.main-team-changes{
  display: flex;
  flex-direction: column;
}

.team-change{
  display: flex;
  flex-direction: row;
  align-items: center;
}

.info-modal-section{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.H2H-text span.text-main{
  color: var( --h2h-general);
}

.graph-text span.text-main{
  color: var( --graph-general);
}

.h2h-highlight {
  animation: h2h-animation 0.3s forwards;
}

.graph-highlight {
  animation: graph-animation 0.3s forwards;
}
/* ... */

